--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Principal</h1>
-    <a href="../Programacion taller 4/html/ejercicio1.html">ejercicio1</a><br>
-    <a href="../Programacion taller 4/html/ejercicio2.html">ejercicio2</a><br>
-    <a href="../Programacion taller 4/html/ejercicio3.html">ejercicio3</a><br>
-    <a href="../Programacion taller 4/html/ejercicio4.html">ejercicio4</a><br>
+    <a href="html/ejercicio1.html">ejercicio1</a><br>
+    <a href="html/ejercicio2.html">ejercicio2</a><br>
+    <a href="html/ejercicio3.html">ejercicio3</a><br>
+    <a href="html/ejercicio4.html">ejercicio4</a><br>
 </body>
 </html>
